Create review action

--- a/app/product/product.html
+++ b/app/product/product.html
@@ -2,6 +2,11 @@
 
 <product-details product="$ctrl.product"></product-details>
 
+
+<h3>Create Review</h3>
+
+<create-review reviews="$ctrl.reviews" product-id="$ctrl.product.id"></create-review>
+
 <h3>Product reviews</h3>
 
 <div ng-repeat="review in $ctrl.reviews">
