--- a/app/app.html
+++ b/app/app.html
@@ -17,9 +17,12 @@
     {% } %}
 </head>
 <body>
-    <toaster-container></toaster-container>
-    <div data-ui-view></div>
 
+    <div layout="column">
+      <toaster-container></toaster-container>
+      <div data-ui-view></div>
+    </div>
+  
 {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
 <script src="{%= o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
 {% } %}
