Products page slicing

--- a/app/products/products.html
+++ b/app/products/products.html
@@ -25,12 +25,12 @@
           ng-repeat="product in $ctrl.products">
             <div class="prduct__content">
               <div class="prduct__content_image">
-                <img src="https://pbs.twimg.com/profile_images/616542814319415296/McCTpH_E.jpg"/>
+                <img src="./img/watch.png"/>
               </div>
 
               <h2>{{product.title}}</h2>
               <p>{{product.text}}</p>
-              
+
               <div class="link">
                 <a class=""
                 ui-sref="root.app.product({id: product.id})"
