Product details page slicing

--- a/app/app.html
+++ b/app/app.html
@@ -10,6 +10,7 @@
     <base href="{%= o.webpackConfig.metadata.baseUrl %}">
     <!-- FONTS -->
     <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <link href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css' rel='stylesheet' type='text/css'>
 
     <link href="{%= o.webpackConfig.metadata.baseUrl %}css/vendor.css.css" rel="stylesheet">
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
@@ -20,7 +21,7 @@
 
 
       <toaster-container></toaster-container>
-      <div data-ui-view></div>
+      <div class="main" data-ui-view></div>
 
 
 {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
