Create review slicing, custom scrollbar

--- a/app/product/product.html
+++ b/app/product/product.html
@@ -1,18 +1,3 @@
-<!-- <a ui-sref="root.app.products">Select another product</a>
-
-<product-details product="$ctrl.product"></product-details>
-
-
-<h3>Create Review</h3>
-
-<create-review reviews="$ctrl.reviews" product-id="$ctrl.product.id"></create-review>
-
-<h3>Product reviews</h3>
-
-<div ng-repeat="review in $ctrl.reviews">
-  <review model="review"></review>
-</div> -->
-
 <div class="container">
   <div class="row content">
     <div class="top-link">
@@ -23,21 +8,20 @@
     </div>
     <div class="wrapper">
       <product-details product="$ctrl.product"></product-details>
+      <div class="create-review">
+        <h1>Create Review</h1>
+        <create-review reviews="$ctrl.reviews" product-id="$ctrl.product.id"></create-review>
+      </div>
       <div class="reviews">
         <div class="reviews__title">
           <h1>Product reviews</h1>
         </div>
-        <!-- <a class="main-btn">Leave Review</a> -->
-        <div class="col-lg-3 col-xs-6">
-          <div ng-repeat="review in $ctrl.reviews | limitTo: 4">
+        <div class="reviews__block col-lg-12 col-xs-12" ng-scrollbars>
+          <div ng-repeat="review in $ctrl.reviews">
             <review model="review"></review>
           </div>
         </div>
-        <div class="col-lg-3 col-xs-6">
-          <div ng-repeat="review in $ctrl.reviews | limitTo: 4 : 8">
-            <review model="review"></review>
-          </div>
-        </div>
+
       </div>
 
     </div>
