--- a/app/app.html
+++ b/app/app.html
@@ -20,7 +20,7 @@
 <body>
 
 
-      <toaster-container></toaster-container>
+      <toaster-container toaster-options="{'time-out': 2000}"></toaster-container>
       <div class="main" data-ui-view></div>
 
 
